--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # General
 venv/
 *.pyc
+.env
+.env.local
 
 # Flask
 flask_api/instance/
-flask_api/app/config.py
 
 # Django
 django_app/db.sqlite3
